@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Accounts> accounts = Arrays.asList(
+        List<Accounts> accounts = List.of(
                 new Accounts("123", "Petr Arsentev", "eDer3432f"),
                 new Accounts("142", "Petr Arsentev", "000001")
         );
         HashSet<Accounts> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Accounts("123", "Petr Arsentev", "eDer3432f"),
                         new Accounts("142", "Petr Arsentev", "000001")
                 )
@@ -28,14 +28,14 @@ public class NotifyAccountTest {
 
     @Test
     public void sen1() {
-        List<Accounts> accounts = Arrays.asList(
+        List<Accounts> accounts = List.of(
                 new Accounts("123", "Petr Arsentev", "eDer3432f"),
                 new Accounts("142", "Petr Arsentev", "000001"),
                 new Accounts("123", "Petr Arsentev", "eDer3432f"),
                 new Accounts("142", "Petr Arsentev", "000001")
         );
         HashSet<Accounts> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Accounts("123", "Petr Arsentev", "eDer3432f"),
                         new Accounts("142", "Petr Arsentev", "000001")
                 )
